# auto-idea-combiner

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SETUP.md  build.bat  build.sh  start.bat  start.sh
backend/: __init__.py  config.py  main.py  pyproject.toml
backend/collectors/: __init__.py  clipboard.py  external_api.py  local_files.py
backend/combiner/: __init__.py  distance.py  selector.py
backend/embedding/: __init__.py  chroma_store.py  generator.py
backend/feedback/: __init__.py  learner.py
backend/llm/: __init__.py  anthropic_llm.py  base.py  factory.py  gemini_llm.py  idea_generator.py  openai_llm.py  prompts.py
backend/models/: __init__.py  db.py
backend/processing/: __init__.py  cleaner.py  extractor.py  normalizer.py
backend/scoring/: __init__.py  scorer.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/api/: client.ts
frontend/src/components/: FeedbackBar.tsx  GenerateButton.tsx  IdeaCard.tsx  IdeaList.tsx  ScoreBadge.tsx
frontend/src/pages/: History.tsx  Home.tsx  SettingsPage.tsx
frontend/src/types/: index.ts
